fix filters alignment

--- a/css/controls.css
+++ b/css/controls.css
@@ -78,10 +78,10 @@
             position: relative;
             width: 100%;
             margin: 0;
-            padding: 4px 80px 5px 45px;
+            padding: 6px 15px 7px 35px;
             box-sizing: border-box;
             &:before {
-                top: 6px;
+                top: 8px;
                 left: 16px;
             }
         }
@@ -98,5 +98,5 @@
     }
 }
 .col-2 .dropdown {
-    left: -19px;
+    left: -15px;
 }
